Added ruleset for contact handling in the PBD library.

--- a/applications/plugins/ZyPositionBasedDynamics/CMakeLists.txt
+++ b/applications/plugins/ZyPositionBasedDynamics/CMakeLists.txt
@@ -137,6 +137,7 @@ set(HEADER_FILES initZyPositionBasedDynamicsPlugin.h
                  PBDIntegration/SofaPBDTriangleCollisionModel.h
                  PBDIntegration/SofaPBDTriangleCollisionModel.inl
 
+                 PBDIntegration/SofaPBDCollisionDetectionOutput.h
                  PBDIntegration/SofaPBDBruteForceDetection.h
                  PBDIntegration/PBDCollisionModelsIntersection.h
                  )
