--- a/extlibs/CMakeLists.txt
+++ b/extlibs/CMakeLists.txt
@@ -87,11 +87,27 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/extlibs/CollDet)
     endif()
 endif()
 
-if(EXISTS ${CMAKE_SOURCE_DIR}/extlibs/impulse-based-dynamics)
-    option(SOFA_BUILD_IMPULSE_BASED_DYNAMICS "Build the ImpulseBasedDynamics library." ON)
+if(EXISTS ${CMAKE_SOURCE_DIR}/extlibs/position-based-dynamics)
+    if (EXISTS ${CMAKE_SOURCE_DIR}/extlibs/PositionBasedDynamics)
+        option(SOFA_BUILD_POSITION_BASED_DYNAMICS "Build the PositionBasedDynamics library." ON)
 
-    if (SOFA_BUILD_IMPULSE_BASED_DYNAMICS)
-        add_subdirectory(impulse-based-dynamics/extern/gl3w ${CMAKE_BINARY_DIR}/extlibs/impulse-based-dynamics/extern/gl3w)
-        add_subdirectory(ImpulseBasedDynamics ${CMAKE_BINARY_DIR}/extlibs/ImpulseBasedDynamics)
+        if (SOFA_BUILD_POSITION_BASED_DYNAMICS)
+            set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/extlibs/PositionBasedDynamics/CMake;${CMAKE_MODULE_PATH}")
+            option(PBD_NO_DEMOS "Build the PositionBasedDynamics demos." OFF)
+            # add_subdirectory(GenericParameters ${CMAKE_BINARY_DIR}/extlibs/GenericParameters)
+            add_subdirectory(Discregrid ${CMAKE_BINARY_DIR}/extlibs/Discregrid)
+            add_subdirectory(position-based-dynamics ${CMAKE_BINARY_DIR}/extlibs/PositionBasedDynamics)
+        endif()
+    endif()
+endif()
+
+if(EXISTS ${CMAKE_SOURCE_DIR}/extlibs/impulse-based-dynamics)
+    if (EXISTS ${CMAKE_SOURCE_DIR}/extlibs/ImpulseBasedDynamics)
+        option(SOFA_BUILD_IMPULSE_BASED_DYNAMICS "Build the ImpulseBasedDynamics library." ON)
+
+        if (SOFA_BUILD_IMPULSE_BASED_DYNAMICS)
+            add_subdirectory(impulse-based-dynamics/extern/gl3w ${CMAKE_BINARY_DIR}/extlibs/impulse-based-dynamics/extern/gl3w)
+            add_subdirectory(ImpulseBasedDynamics ${CMAKE_BINARY_DIR}/extlibs/ImpulseBasedDynamics)
+        endif()
     endif()
 endif()
