--- a/applications/plugins/ZyPositionBasedDynamics/CMakeLists.txt
+++ b/applications/plugins/ZyPositionBasedDynamics/CMakeLists.txt
@@ -35,10 +35,17 @@ include_directories(${CMAKE_SOURCE_DIR}/SofaKernel
                     ${EIGEN3_INCLUDE_DIR}
                     ${EIGEN3_INCLUDE_DIR}/unsupported)
 
-include_directories(${CMAKE_SOURCE_DIR}/extlibs/impulse-based-simulator
-                    ${CMAKE_SOURCE_DIR}/extlibs/impulse-based-simulator/simulator
-                    ${CMAKE_SOURCE_DIR}/extlibs/impulse-based-simulator/executable
-                    ${CMAKE_SOURCE_DIR}/extlibs/impulse-based-simulator/extern/gl3w)
+include_directories(${CMAKE_SOURCE_DIR}/extlibs/impulse-based-dynamics
+                    ${CMAKE_SOURCE_DIR}/extlibs/impulse-based-dynamics/simulator
+                    ${CMAKE_SOURCE_DIR}/extlibs/impulse-based-dynamics/executable
+                    ${CMAKE_SOURCE_DIR}/extlibs/impulse-based-dynamics/extern/gl3w
+                    ${CMAKE_SOURCE_DIR}/extlibs/GenericParameters/GenericParameters
+                    ${CMAKE_SOURCE_DIR}/extlibs/PositionBasedDynamics
+                    ${CMAKE_SOURCE_DIR}/extlibs/PositionBasedDynamics/Common
+                    ${CMAKE_SOURCE_DIR}/extlibs/PositionBasedDynamics/Utils
+                    ${CMAKE_SOURCE_DIR}/extlibs/PositionBasedDynamics/PositionBasedDynamics
+                    ${CMAKE_SOURCE_DIR}/extlibs/PositionBasedDynamics/Simulation
+                    )
 
 if (ZyPipeline_FOUND)
     message(STATUS "Found ZyPipeline package.")
@@ -147,72 +154,72 @@ endif()
 #    target_link_libraries(${IPD_DYNAMICS_LIBRARY_NAME} gl3w)
 #endif()
 
-set(COMMON_UTIL_HEADER_FILES
-    PBDCommon/PBDCommon.h
-    PBDCommon/PBDParameterObject.h
-    PBDCommon/IdFactory.h
-    PBDCommon/PBDMathFunctions.h
+#set(COMMON_UTIL_HEADER_FILES
+#    PBDCommon/PBDCommon.h
+#    PBDCommon/PBDParameterObject.h
+#    PBDCommon/IdFactory.h
+#    PBDCommon/PBDMathFunctions.h
 
-    PBDUtils/PBDVolumeIntegration.h
-    PBDUtils/PBDIndexedFaceMesh.h
-    PBDUtils/PBDIndexedTetrahedronMesh.h
-    PBDUtils/PBDTimeManager.h)
+#    PBDUtils/PBDVolumeIntegration.h
+#    PBDUtils/PBDIndexedFaceMesh.h
+#    PBDUtils/PBDIndexedTetrahedronMesh.h
+#    PBDUtils/PBDTimeManager.h)
 
-set(COMMON_UTIL_SOURCE_FILES
-    PBDCommon/IDFactory.cpp
-    PBDCommon/PBDMathFunctions.cpp
+#set(COMMON_UTIL_SOURCE_FILES
+#    PBDCommon/IDFactory.cpp
+#    PBDCommon/PBDMathFunctions.cpp
 
-    PBDUtils/PBDVolumeIntegration.cpp
-    PBDUtils/PBDIndexedFaceMesh.cpp
-    PBDUtils/PBDIndexedTetrahedronMesh.cpp
-    PBDUtils/PBDTimeManager.cpp)
+#    PBDUtils/PBDVolumeIntegration.cpp
+#    PBDUtils/PBDIndexedFaceMesh.cpp
+#    PBDUtils/PBDIndexedTetrahedronMesh.cpp
+#    PBDUtils/PBDTimeManager.cpp)
 
-set(MODELS_HEADER_FILES
-    PBDModels/initZyPositionBasedDynamicsModels.h
-    PBDModels/PBDLineModel.h
-    PBDModels/PBDTriangleModel.h
-    PBDModels/PBDTetrahedronModel.h
-    PBDModels/PBDSimulationModel.h
-    )
+#set(MODELS_HEADER_FILES
+#    PBDModels/initZyPositionBasedDynamicsModels.h
+#    PBDModels/PBDLineModel.h
+#    PBDModels/PBDTriangleModel.h
+#    PBDModels/PBDTetrahedronModel.h
+#    PBDModels/PBDSimulationModel.h
+#    )
 
-set(MODELS_SOURCE_FILES
-    PBDModels/initZyPositionBasedDynamicsModels.cpp
-    PBDModels/PBDLineModel.cpp
-    PBDModels/PBDTriangleModel.cpp
-    PBDModels/PBDTetrahedronModel.cpp
-    PBDModels/PBDSimulationModel.cpp
-    )
+#set(MODELS_SOURCE_FILES
+#    PBDModels/initZyPositionBasedDynamicsModels.cpp
+#    PBDModels/PBDLineModel.cpp
+#    PBDModels/PBDTriangleModel.cpp
+#    PBDModels/PBDTetrahedronModel.cpp
+#    PBDModels/PBDSimulationModel.cpp
+#    )
 
-set(CONSTRAINTS_HEADER_FILES
-    PBDConstraints/PBDConstraintBase.h
-    PBDConstraints/PBDConstraints.h
-    PBDConstraints/PBDFixedConstraint.h)
+#set(CONSTRAINTS_HEADER_FILES
+#    PBDConstraints/PBDConstraintBase.h
+#    PBDConstraints/PBDConstraints.h
+#    PBDConstraints/PBDFixedConstraint.h)
 
-set(CONSTRAINTS_SOURCE_FILES
-    PBDConstraints/PBDConstraints.cpp
-    PBDConstraints/PBDFixedConstraint.cpp)
+#set(CONSTRAINTS_SOURCE_FILES
+#    PBDConstraints/PBDConstraints.cpp
+#    PBDConstraints/PBDFixedConstraint.cpp)
 
-set(SIMULATION_HEADER_FILES
-    PBDSimulation/PBDParticleData.h
-    PBDSimulation/PBDRigidBodyGeometry.h
-    PBDSimulation/PBDRigidBody.h
-    )
+#set(SIMULATION_HEADER_FILES
+#    PBDSimulation/PBDParticleData.h
+#    PBDSimulation/PBDRigidBodyGeometry.h
+#    PBDSimulation/PBDRigidBody.h
+#    )
 
-set(SIMULATION_SOURCE_FILES
-    PBDSimulation/PBDRigidBodyGeometry.cpp
-    )
+#set(SIMULATION_SOURCE_FILES
+#    PBDSimulation/PBDRigidBodyGeometry.cpp
+#    )
 
-set(DYNAMICS_HEADER_FILES
-    PBDynamics/PositionBasedDynamics.h
-    PBDynamics/PositionBasedRigidBodyDynamics.h
-    PBDynamics/PositionBasedElasticRods.h
-    PBDynamics/PBDTimeIntegration.h)
+#set(DYNAMICS_HEADER_FILES
+#    PBDynamics/PositionBasedDynamics.h
+#    PBDynamics/PositionBasedRigidBodyDynamics.h
+#    PBDynamics/PositionBasedElasticRods.h
+#    PBDynamics/PBDTimeIntegration.h)
 
-set(DYNAMICS_SOURCE_FILES
-    PBDynamics/PositionBasedDynamics.cpp
-    PBDynamics/PositionBasedRigidBodyDynamics.cpp
-    PBDynamics/PositionBasedElasticRods.cpp
-    PBDynamics/PBDTimeIntegration.cpp)
+#set(DYNAMICS_SOURCE_FILES
+#    PBDynamics/PositionBasedDynamics.cpp
+#    PBDynamics/PositionBasedRigidBodyDynamics.cpp
+#    PBDynamics/PositionBasedElasticRods.cpp
+#    PBDynamics/PBDTimeIntegration.cpp)
 
 set(HEADER_FILES initZyPositionBasedDynamicsPlugin.h
                  PBDMain/SofaPBDAnimationLoop.h
@@ -221,14 +228,14 @@ set(HEADER_FILES initZyPositionBasedDynamicsPlugin.h
                  PBDMain/SofaIPDTimeStep.h
                  PBDMain/SofaPBDSimulation.h
 
-                 PBDModels/SofaPBDModelBase.h
-                 PBDModels/SofaPBDLineModel.h
-                 PBDModels/SofaPBDRigidBodyModel.h
-                 PBDModels/SofaPBDTriangleMeshModel.h
-                 PBDModels/SofaPBDTetrahedronMeshModel.h
+#                 PBDModels/SofaPBDModelBase.h
+#                 PBDModels/SofaPBDLineModel.h
+#                 PBDModels/SofaPBDRigidBodyModel.h
+#                 PBDModels/SofaPBDTriangleMeshModel.h
+#                 PBDModels/SofaPBDTetrahedronMeshModel.h
 
-                 PBDIntegration/GeometryAdapterBase.h
-                 PBDIntegration/MechanicalObjectAdapterBase.h
+#                 PBDIntegration/GeometryAdapterBase.h
+#                 PBDIntegration/MechanicalObjectAdapterBase.h
 
                  PBDIntegration/SofaPBDPipeline.h
                  PBDIntegration/SofaPBDCollisionVisitor.h
@@ -257,14 +264,14 @@ set(SOURCE_FILES initZyPositionBasedDynamicsPlugin.cpp
                  PBDMain/SofaPBDTimeStep.cpp
                  PBDMain/SofaPBDSimulation.cpp
 
-                 PBDModels/SofaPBDModelBase.cpp
-                 PBDModels/SofaPBDLineModel.cpp
-                 PBDModels/SofaPBDRigidBodyModel.cpp
-                 PBDModels/SofaPBDTriangleMeshModel.cpp
-                 PBDModels/SofaPBDTetrahedronMeshModel.cpp
+#                 PBDModels/SofaPBDModelBase.cpp
+#                 PBDModels/SofaPBDLineModel.cpp
+#                 PBDModels/SofaPBDRigidBodyModel.cpp
+#                 PBDModels/SofaPBDTriangleMeshModel.cpp
+#                 PBDModels/SofaPBDTetrahedronMeshModel.cpp
 
-                 PBDIntegration/GeometryAdapterBase.cpp
-                 PBDIntegration/MechanicalObjectAdapterBase.cpp
+#                 PBDIntegration/GeometryAdapterBase.cpp
+#                 PBDIntegration/MechanicalObjectAdapterBase.cpp
 
                  PBDIntegration/SofaPBDPipeline.cpp
                  PBDIntegration/SofaPBDCollisionVisitor.cpp
@@ -279,24 +286,24 @@ set(SOURCE_FILES initZyPositionBasedDynamicsPlugin.cpp
                  PBDIntegration/PBDCollisionModelsIntersection.cpp
                  )
 
-add_library(${PROJECT_NAME}_CommonUtils STATIC ${COMMON_UTIL_HEADER_FILES} ${COMMON_UTIL_SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME}_CommonUtils SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision)
+#add_library(${PROJECT_NAME}_CommonUtils STATIC ${COMMON_UTIL_HEADER_FILES} ${COMMON_UTIL_SOURCE_FILES})
+#target_link_libraries(${PROJECT_NAME}_CommonUtils SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision)
 
-add_library(${PROJECT_NAME}_Constraints STATIC ${CONSTRAINTS_HEADER_FILES} ${CONSTRAINTS_SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME}_Constraints SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision SofaLoader ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_Models)
+#add_library(${PROJECT_NAME}_Constraints STATIC ${CONSTRAINTS_HEADER_FILES} ${CONSTRAINTS_SOURCE_FILES})
+#target_link_libraries(${PROJECT_NAME}_Constraints SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision SofaLoader ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_Models)
 
-add_library(${PROJECT_NAME}_Models STATIC ${MODELS_HEADER_FILES} ${MODELS_SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME}_Models SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_Constraints)
+#add_library(${PROJECT_NAME}_Models STATIC ${MODELS_HEADER_FILES} ${MODELS_SOURCE_FILES})
+#target_link_libraries(${PROJECT_NAME}_Models SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_Constraints)
 
-add_library(${PROJECT_NAME}_Simulation STATIC ${SIMULATION_HEADER_FILES} ${SIMULATION_SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME}_Simulation SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_Constraints ${PROJECT_NAME}_Models)
+#add_library(${PROJECT_NAME}_Simulation STATIC ${SIMULATION_HEADER_FILES} ${SIMULATION_SOURCE_FILES})
+#target_link_libraries(${PROJECT_NAME}_Simulation SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_Constraints ${PROJECT_NAME}_Models)
 
-add_library(${PROJECT_NAME}_Dynamics STATIC ${DYNAMICS_HEADER_FILES} ${DYNAMICS_SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME}_Dynamics SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_Constraints ${PROJECT_NAME}_Models)
+#add_library(${PROJECT_NAME}_Dynamics STATIC ${DYNAMICS_HEADER_FILES} ${DYNAMICS_SOURCE_FILES})
+#target_link_libraries(${PROJECT_NAME}_Dynamics SofaCore SofaSimulationCore SofaBaseMechanics SofaBaseCollision ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_Constraints ${PROJECT_NAME}_Models)
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} PUBLIC SofaCore PUBLIC SofaSimulationCore PUBLIC SofaBaseMechanics PUBLIC SofaBaseCollision PUBLIC ${PROJECT_NAME}_CommonUtils PUBLIC ${PROJECT_NAME}_Models PUBLIC ${PROJECT_NAME}_Constraints PUBLIC ${PROJECT_NAME}_Dynamics PUBLIC ${PROJECT_NAME}_Simulation PUBLIC ZyPBDDistanceBasedCollisionDetection)
-
+# target_link_libraries(${PROJECT_NAME} PUBLIC SofaCore PUBLIC SofaSimulationCore PUBLIC SofaBaseMechanics PUBLIC SofaBaseCollision PUBLIC ${PROJECT_NAME}_CommonUtils PUBLIC ${PROJECT_NAME}_Models PUBLIC ${PROJECT_NAME}_Constraints PUBLIC ${PROJECT_NAME}_Dynamics PUBLIC ${PROJECT_NAME}_Simulation PUBLIC ZyPBDDistanceBasedCollisionDetection)
+target_link_libraries(${PROJECT_NAME} PUBLIC SofaCore PUBLIC SofaSimulationCore PUBLIC SofaBaseMechanics PUBLIC SofaBaseCollision PUBLIC ZyPBDDistanceBasedCollisionDetection)
 if (ZyPipeline_FOUND)
     message(STATUS "Found ZyPipeline package.")
     target_link_libraries(${PROJECT_NAME} PUBLIC ZyPipeline)
@@ -312,9 +319,9 @@ if (SOFA_BUILD_IMPULSE_BASED_DYNAMICS)
     sofa_create_package(${IPD_DYNAMICS_LIBRARY_NAME} ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME} ${PROJECT_NAME})
 endif()
 
-sofa_create_package(${PROJECT_NAME}_CommonUtils ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_CommonUtils)
-sofa_create_package(${PROJECT_NAME}_Models ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_Models ${PROJECT_NAME}_Models)
-sofa_create_package(${PROJECT_NAME}_Constraints ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_Constraints ${PROJECT_NAME}_Constraints)
-sofa_create_package(${PROJECT_NAME}_Simulation ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_Simulation ${PROJECT_NAME}_Simulation)
-sofa_create_package(${PROJECT_NAME}_Dynamics ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_Dynamics ${PROJECT_NAME}_Dynamics)
+#sofa_create_package(${PROJECT_NAME}_CommonUtils ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_CommonUtils ${PROJECT_NAME}_CommonUtils)
+#sofa_create_package(${PROJECT_NAME}_Models ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_Models ${PROJECT_NAME}_Models)
+#sofa_create_package(${PROJECT_NAME}_Constraints ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_Constraints ${PROJECT_NAME}_Constraints)
+#sofa_create_package(${PROJECT_NAME}_Simulation ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_Simulation ${PROJECT_NAME}_Simulation)
+#sofa_create_package(${PROJECT_NAME}_Dynamics ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME}_Dynamics ${PROJECT_NAME}_Dynamics)
 sofa_create_package(${PROJECT_NAME} ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME} ${PROJECT_NAME})
