Cleanup, debugging, collision detection pipeline refurbishing.

--- a/applications/plugins/CMakeLists.txt
+++ b/applications/plugins/CMakeLists.txt
@@ -95,6 +95,6 @@ endif()
 # sofa_add_plugin(ZyPBDDistanceBasedCollisionDetection ZyPBDDistanceBasedCollisionDetection ON)
 sofa_add_plugin(ZyPositionBasedDynamics ZyPositionBasedDynamics ON)
 
-if (EXISTS ${CMAKE_SOURCE_DIR}/applications/plugins/BeamAdapter)
-	sofa_add_plugin(BeamAdapter BeamAdapter ON)
-endif()
+#if (EXISTS ${CMAKE_SOURCE_DIR}/applications/plugins/BeamAdapter)
+#        sofa_add_plugin(BeamAdapter BeamAdapter OFF)
+#endif()
