--- a/extlibs/CMakeLists.txt
+++ b/extlibs/CMakeLists.txt
@@ -95,7 +95,7 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/extlibs/position-based-dynamics)
             set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/extlibs/PositionBasedDynamics/CMake;${CMAKE_MODULE_PATH}")
             option(PBD_NO_DEMOS "Build the PositionBasedDynamics demos." OFF)
             # add_subdirectory(GenericParameters ${CMAKE_BINARY_DIR}/extlibs/GenericParameters)
-            add_subdirectory(Discregrid ${CMAKE_BINARY_DIR}/extlibs/Discregrid)
+            add_subdirectory(ext-discregrid)
             add_subdirectory(position-based-dynamics ${CMAKE_BINARY_DIR}/extlibs/PositionBasedDynamics)
         endif()
     endif()
